actually fixed twitter feed overflow

--- a/css/index.css
+++ b/css/index.css
@@ -92,7 +92,7 @@ body{
 }
 
 #tweets{
-    width: 50%
+    width: 50%;
 }
 
 @media screen and (max-aspect-ratio: 8/7){
